--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,14 @@
         "label": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "iframe[loading]"
+        ]
+      }
+    ]
   }
 }
